--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -46,10 +46,11 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./
-          destination: ./_site
+          destination: "./dist"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with: 
+          path: "./dist"
 
   # Deployment job
   deploy:
