--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with: 
-          path: "./dist"
+          path: "./my-portfolio/dist"
 
   # Deployment job
   deploy:
